--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @layer utilities {
   .text-gradient {
     @apply bg-clip-text text-transparent;
-    background-image: linear-gradient(0deg, #f7f7f7, #f7f7f7),
-      linear-gradient(90.6deg, #ff9dd6 62.71%, #ef2097 82.24%);
+    -webkit-background-clip: text; /* Safari/iOS */
+    background-image: linear-gradient(90.6deg, #ff9dd6 62.71%, #ef2097 82.24%);
   }
 }
+
 body {
   background-color: #000000;
   color: #f7f7f7;
